--- a/cotizador__airovac/views/sale_view_order_form_inherith.xml
+++ b/cotizador__airovac/views/sale_view_order_form_inherith.xml
@@ -66,7 +66,7 @@
                 <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='product_uom_qty']" position="after">
                     <field name="discount"/>
                     <field name="e_multiplicador"/>
-                    <field name="e_mult_min" groups="sales_team.group_sale_manager" optional="hide"/>
+                    <field name="e_mult_min" readonly="1" force_save="1" groups="cotizador__airovac.group_nom_options" optional="hide"/>
                     <field name="e_etiqueta_line_a" />
                     <field name="e_etiqueta_line_b" />
                     <field name="e_precio_de_lista" readonly="1" force_save="1" />
@@ -116,10 +116,12 @@
                 <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='price_unit']" position="attributes">
                     <attribute name="optional">hide</attribute>
                     <attribute name="options">{"bg_color": "Pink:e_por_debajo == 1 "}</attribute>
+                    <attribute name="readonly">1</attribute>
+                    <attribute name="force_save">1</attribute>
                 </xpath>
 
                 <xpath expr="//form[1]/sheet[1]/notebook[1]/page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='price_subtotal']" position="before">
-                     <field name="e_punto_venta" readonly="1" force_save="1"   attrs="{'column_invisible': [('parent.breakdown', '=', False)]}" options='{"bg_color": "LightCyan:colored == 1 and principal == 1 ;  LightYellow:colored == 2 and principal == 1 "}'  />
+                     <field name="e_punto_venta" readonly="1" force_save="1"   attrs="{'column_invisible': [('parent.breakdown', '=', False)]}" options='{"bg_color": "Pink:e_por_debajo == 1 "}'  />
                 </xpath>
 
 
