--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -433,19 +433,19 @@
                                     </div>
                                 </div>
 
-                            </div>
 
-                            <div class="footer">
-
-                                <div class="last-page">
                                 <div style="margin-top:5px;"  class="col-12 text-left" name="information_block">
                                     <h2 style="font-family: verdana !important;font-weight: bold !important; font-size: 11pt;!important" > Condiciones Generales:</h2>
                                     <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important text-align: justify !important ;" >
                                         <t t-esc ="doc.note" />
                                     </p>
                                 </div>
+                            </div>
 
-                                    <div class="row">
+                            <div class="footer">
+
+                                <div class="last-page">
+                                    <div class="row mb-3">
                                         <div class="col-1" >
                                             <img class="img-fluid" alt="Logo" src='/web/binary/company_logo'/>
                                         </div>
@@ -455,7 +455,6 @@
                                         </div>
                                     </div>
                                 </div>
-
 
                                 <div class="row">
                                     <div class="col-12" style="border-top: 1px solid black; font-size: 8pt;">
