--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -447,7 +447,7 @@
                                 <div class="last-page">
                                     <div class="row mb-3">
                                         <div class="col-1" >
-                                            <img class="img-fluid" alt="Logo" src='/web/binary/company_logo'/>
+                                            <img class="img-fluid" alt="Logo" src='/web/binary/company_logo' style="max-height: 45px;"/>
                                         </div>
                                         <div class="col-6 text-left">
                                             <span><t t-esc="doc.create_uid.name" />  </span><br/>
