--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -445,9 +445,9 @@
                             <div class="footer">
 
                                 <div class="last-page">
-                                    <div class="row mb-3">
+                                    <div class="row mb-3" style="max-height: 100px;">
                                         <div class="col-1" >
-                                            <img class="img-fluid" alt="Logo" src='/web/binary/company_logo' style="max-height: 45px;"/>
+                                            <img class="img-fluid" alt="Logo" src='/web/binary/company_logo' />
                                         </div>
                                         <div class="col-6 text-left">
                                             <span><t t-esc="doc.create_uid.name" />  </span><br/>
