--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -447,7 +447,7 @@
                                         <div class="col-1" >
                                             <img style="height: 75px !important;" alt="Logo" src='/web/binary/company_logo' />
                                         </div>
-                                        <div class="col-3 text-center mt-1">
+                                        <div class="col-3 text-center pt-2">
                                             <span><t t-esc="doc.create_uid.name" />  </span><br/>
                                             <span><t t-esc="doc.create_uid.function" /></span>
                                         </div>
