--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -8,7 +8,7 @@
             report_type="qweb-pdf"
             name="presupuesto_airovac.report_ventas_presupuesto"
             file="presupuesto_airovac.report_ventas_presupuesto"
-            print_report_name="'Cotización - %s' % (object.name)"
+            print_report_name="'Cotizacion - %s' % (object.name)"
             attachment_use="True"
     />
 
@@ -447,7 +447,7 @@
                                         <div class="col-1" >
                                             <img style="height: 75px !important;" alt="Logo" src='/web/binary/company_logo' />
                                         </div>
-                                        <div class="col-3 text-center pt-3">
+                                        <div class="col-3 text-center pt-2">
                                             <span><t t-esc="doc.create_uid.name" />  </span><br/>
                                             <span><t t-esc="doc.create_uid.function" /></span>
                                         </div>
