--- a/efecto_custom_factura_mx/views/num_pedimeto_invoice.xml
+++ b/efecto_custom_factura_mx/views/num_pedimeto_invoice.xml
@@ -23,7 +23,14 @@
                 </tr>
             </t>
         </xpath>
+        <xpath expr="//p[@name='comment']" position="replace" >
+            <div t-if="o.narration" name="comment">
+                        <t t-raw ="o.narration"/>
+            </div>
+        </xpath>
     </template>
+
+
 
 
 </odoo>
