--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -246,14 +246,26 @@
 
                                                         </td>
                                                         <td name="th_description" style="text-align: justify !important ;">
-                                                            <t t-set="variables" t-value="'('" />
-                                                                <t t-foreach="line.product_id.product_template_attribute_value_ids" t-as="va">
-<!--                                                                    <t t-esc ="va.name" ></t>-->
-                                                                    <p>va.name</p>
-                                                                    <t t-set="variables" t-value="variables + va.name"/>
-                                                                </t>
-                                                            <span><t t-esc="variables"/> </span>
-                                                            <a href="https://airovac-airovactest-1135560.dev.odoo.com"><strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.product_template_id.default_code"></span></strong></a>
+                                                           <t t-set="contador" t-value="0"/>
+                                                                    <t t-set="variables" t-value="'('"/>
+                                                                    <t t-foreach="line.product_id.product_template_attribute_value_ids" t-as="va">
+                                                                         <t t-if="contador > 0">
+                                                                                 <t t-set="variables" t-value="variables + ' , ' + va.name"/>
+                                                                         </t>
+                                                                        <t t-if="contador == 0">
+                                                                                 <t t-set="variables" t-value="variables + ' , ' + va.name"/>
+                                                                         </t>
+                                                                    </t>
+                                                                    <t t-set="variables" t-value="variables + ')'"/>
+                                                                    <t t-set="contador" t-value="0"/>
+
+                                                             <a href="https://airovac-airovactest-1135560.dev.odoo.com">
+                                                                 <strong>
+                                                                     <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;">
+                                                                        <t t-esc ="line.product_template_id.default_code" />  <t t-esc="variables" />
+                                                                     </span>
+                                                                 </strong>
+                                                             </a>
                                                             <br/>
                                                             <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important; line-height: 94% !important;">
                                                                 <t t-if = "line.product_template_id.description_sale != False" >
@@ -307,13 +319,7 @@
                                                     <tr class="">
                                                         <td name="td_partida" class="text-center">
                                                             <div class="row" >
-                                                                 <t t-set="variables" t-value="'('"/>
-                                                                <t t-foreach="line.product_id.product_template_attribute_value_ids" t-as="va">
-<!--                                                                    <t t-esc ="va.name" ></t>-->
-                                                                    <p>va.name</p>
-                                                                    <t t-set="variables" t-value="variables + va.name"/>
-                                                                </t>
-                                                                <span><t t-esc="variables"/> </span>
+
                                                                 <div class="col-12  text-center">
                                                                     <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.e_partida"></span>
                                                                 </div>
@@ -331,13 +337,30 @@
 
                                                         </td>
                                                         <td name="th_description" style="text-align: justify !important ;">
-                                                             <a href="https://airovac-airovactest-1135560.dev.odoo.com"><strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.product_template_id.default_code"></span></strong></a>
+                                                              <t t-set="contador" t-value="0"/>
+                                                                    <t t-set="variables" t-value="'('"/>
+                                                                    <t t-foreach="line.product_id.product_template_attribute_value_ids" t-as="va">
+                                                                         <t t-if="contador > 0">
+                                                                                 <t t-set="variables" t-value="variables + ' , ' + va.name"/>
+                                                                         </t>
+                                                                        <t t-if="contador == 0">
+                                                                                 <t t-set="variables" t-value="variables + ' , ' + va.name"/>
+                                                                         </t>
+                                                                    </t>
+                                                                    <t t-set="variables" t-value="variables + ')'"/>
+                                                                    <t t-set="contador" t-value="0"/>
+
+                                                             <a href="https://airovac-airovactest-1135560.dev.odoo.com"><strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;">
+                                                               <t t-esc ="line.product_template_id.default_code" ></t>  <t t-esc="variables" />
+                                                             </span></strong></a>
                                                                 <br/>
                                                             <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important; line-height: 94% !important;">
+
 
                                                                 <t t-if = "line.product_template_id.description_sale != False" >
                                                                     <t t-foreach="line.product_id.product_template_attribute_value_ids" t-as="va">
                                                                         <t t-esc ="va.name" ></t>
+
                                                                     </t>
                                                                     <t t-esc ="line.product_template_id.description_sale" />
                                                                 </t>
